--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -48,10 +48,11 @@ Contact mail : savon-lucetteestcoquette@orange.fr</p>
 
         <div class="row featurette">
             <div class="col-md-7">
-                <h2 class="featurette-heading">Contactez Nous  </h2>
-                <p class="lead">Téléphone : 09 50 92 67 13 ,  
+                <p><a class="btn btn-lg btn-primary" href="{{path('app_contact')}}" role="button">Contactez-Nous</a></p> 
+                 
 
- Mail : savon-lucetteestcoquette@orange.fr</p>
+
+
  <h3>Les horaires d'ouverture  </h3>
   <p class="lead">Horaires d'hiver 10h00-13h // 14h30-18h30 sauf le lundi et mardi à Cabourg
                                 Horaires d'été 10h00-13h et 14h30- 19h00 sauf le lundi à Cabourg .</p>
