--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 {% if panier | length > 0 %}
 <div class="container mt-5">
-<h1>Panier</h1>
+    <h1>Panier</h1>
     <table class="table">
         <thead>
             <tr>
@@ -19,12 +19,14 @@
         <tbody>
             {% for art in panier %}
                 <tr>
+                    <td><img src="/assets/produits/{{ art.article.image }}" height="75px"></td>
                     <td>{{art.article.title}}</td>
-                    <td>{{art.article.prix}}</td>
-                    <td>{{art.quantite}}</td>
-                    <td>{{art.article.prix * art.quantite}}</td>
+                   <td>{{art.quantite}}</td>
+                   
+                   <td>{{ art.article.prix }} €</td>
+                   <td>{{ art.article.prix * art.quantite }} €</td>
                     <td>
-                        <a class="btn btn-danger" href="{{ path('app_panier_delete', {'id' : art.article.id })}}">supprimer</a>
+                        <a class="btn btn-danger" href="{{ path('panier_delete', {'id' : art.article.id }) }}">supprimer</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -35,8 +37,13 @@
                 <td></td>
                 <td></td>
                 <td>{{total}}</td>
-                <td></td>
-
+                <td>
+                    {% if panier | length > 0 %}
+                        <a class="btn btn-danger" style='background-color: green;color: white;' href="{{ path('order') }}">Valider la commande</a>
+                    {% else %}
+                        <!-- You can show a disabled button or a message here if the cart is empty -->
+                    {% endif %}
+                </td>
             </tr>
         </tfoot>
     </table>
@@ -45,3 +52,4 @@
 <p>votre panier est vide !</p> 
 {% endif %}
 {% endblock %}
+
