--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -1,5 +1,7 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
+
+
 /* Padding below the footer and lighter body text */
 
 body {
@@ -12,21 +14,29 @@ body {
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
+
 /* Carousel base class */
+
 .carousel {
     margin-bottom: 4rem;
 }
+
+
 /* Since positioning the image, we need to help out the caption */
+
 .carousel-caption {
     bottom: 3rem;
     z-index: 10;
 }
 
+
 /* Declare heights because of positioning of img element */
+
 .carousel-item {
     height: 32rem;
 }
-.carousel-item > img {
+
+.carousel-item>img {
     position: absolute;
     top: 0;
     left: 0;
@@ -38,14 +48,18 @@ body {
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
+
 /* Center align the text within the three columns below the carousel */
+
 .marketing .col-lg-4 {
     margin-bottom: 1.5rem;
     text-align: center;
 }
+
 .marketing h2 {
     font-weight: 400;
 }
+
 .marketing .col-lg-4 p {
     margin-right: .75rem;
     margin-left: .75rem;
@@ -56,10 +70,13 @@ body {
 ------------------------- */
 
 .featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+    margin: 5rem 0;
+    /* Space out the Bootstrap <hr> more */
 }
 
+
 /* Thin out the marketing headings */
+
 .featurette-heading {
     font-weight: 300;
     line-height: 1;
@@ -77,7 +94,6 @@ body {
         font-size: 1.25rem;
         line-height: 1.4;
     }
-
     .featurette-heading {
         font-size: 50px;
     }
