--- a/templates/article/produit.html.twig
+++ b/templates/article/produit.html.twig
@@ -1,8 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="row">
+  <div class="col-lg-3"> <br><br>
+      <h3>Filtrer</h3>
+         {{form(form)}}
+       
 
-<section>
+
+  </div>
+
+  <div class="col-lg-9">
+  <br> <br>
+     <h3>Nos Produits</h3>
+     <section>
     <div class="container">
         <articles class="col-lg-12">
             <article class="row">
@@ -12,7 +23,7 @@
                         <div class="col-lg-12">
                             <img width="150px" height="150px" src="/assets/produits/{{ article.image }}">
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4" style"width=; height;">
                             <h4>{{ article.title }}</h4>
                         </div>
                         <div class="col-lg-12">
@@ -22,14 +33,19 @@
                             <h1>{{ article.prix }} €</h1>
                         </div>
                         <div class="col-lg-12">
-                            <a class="btn btn-success" href="{{ path('app_panier_add', {'id': article.id })}}">Ajouter au panier</a>
+                            <a class="btn btn-success" href="{{ path('panier_add', {'id': article.id })}}">Ajouter au panier</a>
                         </div>
                     </div>
                 </div>
-            {% endfor %}
+                           {% endfor %}
             </article>
         </articles>
     </div>
 </section>
+  </div>
+
+
+
+ 
     
 {% endblock %}
