--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -197,10 +197,10 @@
 
 <h1>Nous contacter</h1>
 <button>
-<a class="btn btn-danger" style='background-color: green;color: white;' href="{{ path('home') }}">Retour à l'accueil</a>
+
 </button>
 <div class="form-container">
-
+<a  href="{{path('home')}}"  class="return-button">Retour à la page d'accueil</a> <hr>
     {{ form(formulaire) }}
 
 </div>
