--- a/templates/order/recap.html.twig
+++ b/templates/order/recap.html.twig
@@ -66,7 +66,7 @@
 <br>
 <hr>
    </div>
-   <a href="" class="btn btn-success btn-block mt-3">Payer</a>
+   <a href="{{path('paiement')}}"  class="btn btn-success btn-block mt-3">Payer</a>
 </div>
 </div>
 
