--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,6 +38,8 @@
                             Se Connecter
                         </button>
                         <hr>
+<p class="text-center"><a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié</a>?</p>
+
                         <p class="text-center">Ou <a href="{{path ('inscription')}}">Créer un compte</a>?</p>
                         </div>
                     </form>
